# option-strategy-recognizer

./: README.md  pyproject.toml
option_strategy_recognizer/: __init__.py  models.py  recognizer.py
tests/: test_recognizer.py
