[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "option-strategy-recognizer"
version = "0.1.0"
description = "Identify options strategies from raw brokerage positions — Iron Condor, Bull Put Spread, Covered Call, and 20+ more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/quant-tools/option-strategy-recognizer"
Repository = "https://github.com/quant-tools/option-strategy-recognizer"

[tool.pytest.ini_options]
testpaths = ["tests"]
